syntax = "proto3";

package chartdb.v1;

option go_package = "chartdb/v1;chartdb";

import "google/protobuf/timestamp.proto";

enum UserType {
    USER_TYPE_UNSPECIFIED = 0;
    USER_TYPE_GUEST = 1;
    USER_TYPE_STUDENT = 2;
    USER_TYPE_TEACHER = 3;
    USER_TYPE_ADMIN = 4;
}

message User {
    reserved 4 to 99;

    string id = 1;
    string login = 2;
    UserType type = 3;

    google.protobuf.Timestamp created_at = 100;
    google.protobuf.Timestamp updated_at = 101;
}
